Fix search bar overlapping title. Fixes #375
1. In files Gemfile and Gemfile.lock, webrick dependency is added to avoid the 'require' error.
2. In nav.html file, the left CSS property is set to be a relative value of 25.2% to avoid overlapping with title and distance variable is removed wherever necessary.
3. In airspace.css, width of searchForm is reduced to 180px to resolve the issue of overlapping.

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -7,7 +7,7 @@
   position:absolute;
   left:350px;
   z-index:2;
-  width: 200px;
+  width: 180px;
   box-sizing: border-box;
   border: 2px solid #ccc;
   border-radius: 4px;
